--- a/Model_performance/Performance_Analysis.ipynb
+++ b/Model_performance/Performance_Analysis.ipynb
@@ -78,7 +78,7 @@
    "metadata": {},
    "source": [
     "## Checking the results of the model's validation script\n",
-    "In the validation, evaluate our model on the validation dataset that contains 5k images by calculating: \n",
+    "In the validation, we evaluated our model on the validation dataset that contains 5k images by calculating: \n",
     "- The The Mean Squared Error (MSE) which measures the average squared difference between the predicted and ground truth saliency maps.\n",
     "- The Pearson Correlation that measures the linear relationship between the predicted and ground truth saliency maps.\n",
     "- The Area Under the Curve (AUC) that measures the model’s ability to distinguish between salient and non-salient regions.\n",
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this example of Image ID 161609 the metrics for Image ID 161609 indicate solid but not perfect performance. The MSE of 0.0185 suggests some small deviations between predicted and actual saliency values. The Pearson Correlation of 0.7204 reflects a reasonably strong linear relationship, showing the model captures significant patterns in the data. The AUC of 0.8692 demonstrates good discriminative ability, meaning the model effectively distinguishes salient regions. Overall, the model performs well but has room for refinement."
+    "In this example of Image ID 161609 the metrics indicate solid but not perfect performance. The MSE of 0.0185 suggests some small deviations between predicted and actual saliency values. The Pearson Correlation of 0.7204 reflects a reasonably strong linear relationship, showing the model captures significant patterns in the data. The AUC of 0.8692 demonstrates good discriminative ability, meaning the model effectively distinguishes salient regions. Overall, the model performs well but has room for refinement."
    ]
   },
   {
